# cpp-raii-reader

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cpp.yml
conf-src/: sanitizers_configure.cpp
tests/: test.cpp
